--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <th>Acciones</th>
               </tr>
             </thead>
-            <tbody>
+            <tbody id="registros">
               <tr>
                 <td>1</td>
                 <td>Teclado</td>
@@ -110,8 +110,25 @@
       }
 
       function consultarDatos(){
+
+        $("#registros").empty();
         $.getJSON("index.php",function (lol){
-          console.log(lol);
+          var teclados=[];
+          
+          $.each(lol,function(key,value){
+          if(key>0){
+            var template="<tr>";
+            template+="<td>"+value.id+"</td>";
+            template+="<td>"+value.nombre+"</td>";
+            template+="<td>"+value.precio+"</td>";
+            template+="<td>Seleccionar | Borrar </td>";
+              template+="</tr>";
+
+              teclados.push(template);
+          }
+          });
+
+          $("#registros").append(teclados.join(""));  
         });}
         consultarDatos();
  
