--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
       contentType:false,
     succes:function(respuesta){
       console.log(respuesta);
+      consultarDatos();
     }
     });
       }
@@ -121,7 +122,8 @@
             template+="<td>"+value.id+"</td>";
             template+="<td>"+value.nombre+"</td>";
             template+="<td>"+value.precio+"</td>";
-            template+="<td>Seleccionar | Borrar </td>";
+            template+="<td>Seleccionar";
+              template+='<input class="btn btn-danger"  type="button" value="borrar" onclick="borrar('+value.id+')"/></td>';
               template+="</tr>";
 
               teclados.push(template);
@@ -131,6 +133,12 @@
           $("#registros").append(teclados.join(""));  
         });}
         consultarDatos();
+
+
+        function borrar(id){
+          $.get("index.php?borrar="+id,function (){
+            consultarDatos();
+          });}
  
     </script>
     
@@ -148,3 +156,4 @@
     
   </body>
 </html>
+
